[build-system]
requires = ["setuptools >= 65", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "biostr"
version = "0.0.0"
authors = [
	{name = "Javier Montalvo-Arredondo", email = "buitrejma@gmail.com"}
]

description = "BioStructure-C is a Python library which has data structures and functions written in c to handle DNA sequences"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
	"Development Status :: 1 - PreAlpha",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Pyhton :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["biostrc", "clib", "bioinformatics"]

