
[metadata]
name = biostr
version = "0.0.0"
author = Javier Montalvo-Arredondo
author_email = buitrejma@gmail.com
description = "BioStructure-C is a Python library which has data structures and functions written in c to handle DNA sequences"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = biostrc, clib, bioinformatics
license = GPLv3+
classifiers = 
	Development Status :: 1 - PreAlpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
	Programming Language :: Pyhton :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >= 3.10
